--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "index.js",
   "scripts": {
     "analyze": "cem analyze --litelement",
-    "start": "json-server --watch ./database/lists.json"
+    "start": "web-dev-server"
   },
   "dependencies": {
     "@lion/ajax": "^1.0.0",
